--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "astro": "^3.4.3",
+    "microcms-js-sdk": "^2.7.0",
     "typescript": "^5.2.2"
   }
 }
